# buck2-rust

./: .buckconfig  .gitignore  README.md  import_rustc.sh
bootstrap/: BUCK
compiler/: BUCK  Cargo.toml  compiler_rule_defs.bzl  reindeer.toml
compiler/ci-llvm/: BUCK
compiler/ci-llvm/include/llvm/Config/: AsmParsers.def  AsmPrinters.def  Disassemblers.def  Targets.def  llvm-config.h
compiler/ci-llvm/include/llvm/MC/: MCSubtargetInfo.h
compiler/ci-llvm/include/llvm/Support/: VCSRevision.h
compiler/fixups/ahash/: fixups.toml
compiler/fixups/cranelift-codegen/: fixups.toml
compiler/fixups/psm/: fixups.toml
compiler/fixups/psm/overlay/src/: lib.rs
compiler/fixups/rustc_attr/: fixups.toml
compiler/fixups/rustc_baked_icu_data/: fixups.toml
compiler/fixups/rustc_codegen_llvm/: fixups.toml
compiler/fixups/rustc_error_codes/: fixups.toml
compiler/fixups/rustc_error_messages/: fixups.toml
compiler/fixups/rustc_interface/: fixups.toml
compiler/fixups/rustc_llvm/: fixups.toml
compiler/fixups/rustc_target/: fixups.toml
compiler/fixups/rustix/: fixups.toml
compiler/fixups/serde_json/: fixups.toml
compiler/fixups/snap/: fixups.toml
compiler/fixups/stacker/: fixups.toml
compiler/fixups/syn/: fixups.toml
compiler/fixups/target-lexicon/: fixups.toml
compiler/fixups/unic-ucd-version/: fixups.toml
compiler/src/rustc_baked_icu_data/src/data/: mod.rs
compiler/src/rustc_codegen_cranelift/: Cargo.toml
compiler/src/rustc_codegen_gcc/: Cargo.toml
compiler/src/rustc_driver/: Cargo.toml
compiler/top/: empty.rs
test/: BUCK
toolchains/: BUCK  (+2 more)
(+7 files in other folders)
